--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Portfolio">
+    <meta name="description" content="Projects">
     <meta name="keywords" content="fareen lavji, flavji, fareenlavji, womeninSTEM, softwareengineering, softeng, ai, cyber">
 
-    <title>Fareen's Portfolio</title>
+    <title>Fareen's Projects</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="vendor/hackerthemes-neon-glow/css/bootstrap4-neon-glow.min.css">
@@ -15,7 +15,6 @@
     <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
     <link rel='stylesheet' href="assets/css/footer.css">
 </head>
-
 <header>
     <div>
         <!-- title + nav -->
@@ -27,9 +26,9 @@
                             <span>
                                 <a href="https://github.com/flavji/flavji.github.io" class="hal-9000"></a>
                             </span>
-                            Welcome to my portfolio<span class="vim-caret">!</span>
+                            Busy bee is my middle name
                         </h1>
-                        <div class="lead mb-3 text-mono text-success">Guess what? It starts with this website.</div>
+                        <div class="lead mb-3 text-mono text-success">Take a look at my work.</div>
                         <div class="text-mono">
                             <a href="index.html"
                                class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
@@ -54,24 +53,18 @@
         </div>
     </div>
 </header>
-
 <body>
     <div class="container">
-        <h1>About me</h1>
-        <div class="text-grey">
-            <p>Hi friend! I see you have somehow stumbled upon my website and are now wondering who I am. Well, I
-            am an undergraduate student studying towards a Bachelor of Engineering in Software Engineering. But that is
-            not all that defines me.</p>
-        </div>
+        <p class="card"> Oh! This page is still under construction.</p>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
 <footer>
     <div class="container card-footer">
         <div>
