--- a/template.html
+++ b/template.html
@@ -15,7 +15,6 @@
     <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
     <link rel='stylesheet' href="assets/css/footer.css">
 </head>
-
 <header>
     <div>
         <!-- title + nav -->
@@ -54,26 +53,11 @@
         </div>
     </div>
 </header>
-
 <body>
-    <div class="container">
-        <h1>About me</h1>
-        <div class="text-grey">
-            <p>Hi friend! I see you have somehow stumbled upon my website and are now wondering who I am. Well, I
-            am an undergraduate student studying towards a Bachelor of Engineering in Software Engineering. But that is
-            not all that defines me.</p>
-        </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
 <footer>
-    <div class="container card-footer">
+    <div class="conatiner card-footer">
         <div>
             <nav>
                 <a href="https://linkedin.com/in/fareenlavji"><img src="assets/logos/linkedin.png" class="logo"></a>
