--- a/misc.html
+++ b/misc.html
@@ -35,11 +35,11 @@
                                 Home
                             </a>
                             <a href="CV.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
                                 Curriculum Vitae
                             </a>
                             <a href="projects.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
                                 Projects
                             </a>
                             <a href="misc.html"
