--- a/CV.html
+++ b/CV.html
@@ -39,11 +39,11 @@
                                 Curriculum Vitae
                             </a>
                             <a href="projects.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
                                 Projects
                             </a>
                             <a href="misc.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
                                 What's this?
                             </a>
                         </div>
