--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                                 Home
                             </a>
                             <a href="CV.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
                                 Curriculum Vitae
                             </a>
                             <a href="projects.html"
@@ -43,7 +43,7 @@
                                 Projects
                             </a>
                             <a href="misc.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
                                 What's this?
                             </a>
                         </div>
