Trying nav, footer modularization

--- a/CV.html
+++ b/CV.html
@@ -31,19 +31,19 @@
                         <div class="lead mb-3 text-mono text-success">Here's my justification.</div>
                         <div class="text-mono">
                             <a href="index.html"
-                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
                                 Home
                             </a>
                             <a href="CV.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
                                 Curriculum Vitae
                             </a>
                             <a href="projects.html"
-                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
                                 Projects
                             </a>
                             <a href="misc.html"
-                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
                                 What's this?
                             </a>
                         </div>
@@ -69,9 +69,15 @@
     <div class="container card-footer">
         <div>
             <nav>
-                <a href="https://linkedin.com/in/fareenlavji"><img src="assets/logos/linkedin.png" class="logo"></a>
-                <a href="https://twitter.com/fareenlavji"><img src="assets/logos/twitter.png" class="logo"></a>
-                <a href="https://instagram.com/fareenlavji"><img src="assets/logos/insta.png" class="logo"></a>
+                <a href="https://linkedin.com/in/fareenlavji" class="ht-tm-element btn btn-outline-primary">
+                    <span class="fab fa-linkedin"/>
+                </a>
+                <a href="https://twitter.com/fareenlavji" class="ht-tm-element btn btn-outline-primary">
+                    <span class="fab fa-twitter"/>
+                </a>
+                <a href="https://instagram.com/fareenlavji" class="ht-tm-element btn btn-outline-primary">
+                    <span class="fab fa-instagram"/>
+                </a>
             </nav>
         </div>
         <div>
