--- a/index.html
+++ b/index.html
@@ -30,23 +30,8 @@
                             Welcome to my portfolio<span class="vim-caret">!</span>
                         </h1>
                         <div class="lead mb-3 text-mono text-success">Guess what? It starts with this website.</div>
-                        <div class="text-mono">
-                            <a href="index.html"
-                               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
-                                Home
-                            </a>
-                            <a href="CV.html"
-                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
-                                Curriculum Vitae
-                            </a>
-                            <a href="projects.html"
-                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
-                                Projects
-                            </a>
-                            <a href="misc.html"
-                               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
-                                What's this?
-                            </a>
+                        <div>
+                            <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]."assets/template"; include(IPATH."nav.html") ?>
                         </div>
                     </div>
                 </div>
@@ -56,6 +41,12 @@
 </header>
 
 <body>
+    <!-- highlights -->
+    <div class="container carousel">
+        <!-- do shit -->
+    </div>
+
+    <!-- about me -->
     <div class="container">
         <h1>About me</h1>
         <div class="text-grey">
@@ -89,21 +80,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
 
-<footer>
-    <div class="jumbotron container card-footer">
-        <div>
-            <nav>
-                <a href="https://linkedin.com/in/fareenlavji"><img src="assets/logos/linkedin.png" class="logo"></a>
-                <a href="https://twitter.com/fareenlavji"><img src="assets/logos/twitter.png" class="logo"></a>
-                <a href="https://instagram.com/fareenlavji"><img src="assets/logos/insta.png" class="logo"></a>
-            </nav>
-        </div>
-        <div>
-            <br>
-            <p class="small">&copy; Fareen Lavji 2020</p>
-        </div>
-    </div>
-</footer>
+    <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]."assets/template"; include(IPATH."footer.html") ?>
+</body>
 </html>
