--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
     <link rel='stylesheet' href="assets/css/footer.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+
+            $('#nav').load("assets/template/nav.html");
+            $('#footer').load("assets/template.footer.html");
+        });
+    </script>
+
 </head>
 
 <header>
@@ -30,9 +40,7 @@
                             Welcome to my portfolio<span class="vim-caret">!</span>
                         </h1>
                         <div class="lead mb-3 text-mono text-success">Guess what? It starts with this website.</div>
-                        <div>
-                            <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]."assets/template"; include(IPATH."nav.html") ?>
-                        </div>
+                        <div id="nav"/>
                     </div>
                 </div>
             </div>
@@ -81,6 +89,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]."assets/template"; include(IPATH."footer.html") ?>
+    <div id="footer"/>
 </body>
 </html>
