--- a/index.html
+++ b/index.html
@@ -14,16 +14,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
     <link rel='stylesheet' href="assets/css/footer.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function(){
-
-            $('#nav').load("assets/template/nav.html");
-            $('#footer').load("assets/template.footer.html");
-        });
-    </script>
-
 </head>
 
 <header>
@@ -40,7 +30,24 @@
                             Welcome to my portfolio<span class="vim-caret">!</span>
                         </h1>
                         <div class="lead mb-3 text-mono text-success">Guess what? It starts with this website.</div>
-                        <div id="nav"/>
+                        <div class="text-mono">
+                            <a href="../../index.html"
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
+                                Home
+                            </a>
+                            <a href="../../CV.html"
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
+                                Curriculum Vitae
+                            </a>
+                            <a href="../../projects.html"
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
+                                Projects
+                            </a>
+                            <a href="../../misc.html"
+                               class="btn btn-primary btn-shadow px-3 my-2 ml-0 text-left">
+                                What's this?
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -88,7 +95,26 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-    <div id="footer"/>
 </body>
+<footer>
+    <div class="container card-footer">
+        <div>
+            <nav>
+                <a href="https://linkedin.com/in/fareenlavji" class="ht-tm-element btn btn-outline-primary">
+                    <span class="fab fa-linkedin"/>
+                </a>
+                <a href="https://twitter.com/fareenlavji" class="ht-tm-element btn btn-outline-primary">
+                    <span class="fab fa-twitter"/>
+                </a>
+                <a href="https://instagram.com/fareenlavji" class="ht-tm-element btn btn-outline-primary">
+                    <span class="fab fa-instagram"/>
+                </a>
+            </nav>
+        </div>
+        <div>
+            <br>
+            <p class="small">&copy; Fareen Lavji 2020</p>
+        </div>
+    </div>
+</footer>
 </html>
